k8s/apps/rclone/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rclone
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
