k8s/apps/rclone/resources/ingress-music.yaml
apiVersion: v1
kind: Service
metadata:
  name: music

spec:
  selector:
    app: music
  ports:
    - port: 5572
      targetPort: 5572

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music

spec:
  routes:
    - kind: Rule
      match: Host(`rclone.starry.blue`) && PathPrefix(`/music`)
      priority: 10
      services:
        - name: music
          port: 5572
      middlewares:
        - name: forward-auth-authentik
          namespace: authentik
        - name: rclone-authorization-header
